@@ -50,21 +50,31 @@
   ],
   "dependencies": {
     "grunt": "0.4.x",
-    "grunt-wiredep": "^2.0.0",
     "grunt-connect-proxy": "~0.1.10",
-    "grunt-contrib-clean": "~0.5.0",
     "grunt-connect-rewrite": "^0.2.1",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-recess": "^0.7.0",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-usemin": "~2.0.0",
     "grunt-contrib-jshint": "~0.7.1",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-karma": "0.10.x",
     "grunt-processhtml": "~0.3.3",
+    "grunt-protractor-runner": "~1.1.4",
+    "grunt-recess": "^0.7.0",
     "grunt-rev": "~0.1.0",
+    "grunt-usemin": "~2.0.0",
+    "grunt-wiredep": "^2.0.0",
     "jshint-stylish": "~0.1.3",
-    "grunt-contrib-cssmin": "~0.7.0"
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
+    "protractor": "~1.2.0"
   }
 }
